# footing

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  footing.yaml  mkdocs.yml  pyproject.toml  tox.ini
.circleci/: config.yml
docs/: index.md  requirements.txt
footing/tests/: test_check.py  test_update.py  test_utils.py
