[build-system]
requires = ["poetry_core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["footing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip",
    "@(typing\\.)?overload",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "footing"
packages = [
  { include = "footing" }
]
exclude = [
  "*/tests/"
]
version = "1.0.1"
description = "Keep templated projects in sync with their template"
authors = ["Wes Kendall"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/AmbitionEng/footing"
repository = "https://github.com/AmbitionEng/footing"
documentation = "https://footing.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.10.0,<4"
click = ">=6.7"
cookiecutter = "<2.0.0"
pyyaml = ">=5.1.2,<=5.3.1"
python-gitlab = ">=2.10.1"
requests = ">=2.13.0"
tldextract = ">=3.1.2"

[tool.poetry.dev-dependencies]
pytest = "9.0.1"
pytest-cov = "7.0.0"
pytest-dotenv = "0.5.2"
pytest-mock = "3.14.0"
pyfakefs = "5.7.1"
responses = "0.25.0"
tox = "4.23.2"
mkdocs = "1.6.1"
black = "25.11.0"
mkdocs-material = "9.7.0"
mkdocstrings-python = "2.0.0"
footing = "*"
setuptools = "*"
poetry-core = "2.2.1"
cleo = "2.1.0"
poetry-plugin-export = "1.9.0"
typing-extensions = "4.15.0"

[tool.poetry.scripts]
footing = 'footing.cli:main'

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "footing/tests"
norecursedirs = ".venv"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "G", "C4"]
line-length = 99
target-version = "py310"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/migrations/**",
    "**/tests/**",
]
pythonVersion = "3.10"
typeCheckingMode = "standard"
